# dbt-starter

./: .env.sample  .gitignore  Makefile  README.md  catalog-info.yaml  dbt_project.yml  profiles.yml.sample  pull_request_template.md  pyproject.toml  setup.py
ae-scripts/: dbt_to_dbdiagram.py  uat_tester.py
ae-scripts/excel-to-markdown/: README.md  script.py
macros/: generate_alias_name.sql  generate_schema_name.sql
