[tool.poetry]
name = "dbt-project"
version = "0.1.0"
description = ""
authors = ["Enzo Mercado <lorenzom@thinkingmachin.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
poetry-dotenv-plugin = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
